--- a/Thesis/thesis.tex
+++ b/Thesis/thesis.tex
@@ -147,6 +147,7 @@ Sieci splotowe to takie głębokie sieci neuronowe, które zawierają jedną lub
     \centering
     \includegraphics[width=\linewidth]{images/cnn.jpeg}
     \caption{Przykład sieci splotowej dla problemu MNIST}
+    \cite{cnn}
 \end{figure}
 \subsection{Operacja splotu}
 Operacja splotu w kontekście sieci neuronowych jest to przebieg jądra przez wartości pikseli obrazu wejściowego.
@@ -155,6 +156,7 @@ W przestrzeni dwu wymiarowej jest to równoważne z nałożeniem na obraz wejśc
     \centering
     \includegraphics[width=\linewidth]{images/convolution.png}
     \caption{Operacja splotu}
+    \cite{convolution}
 \end{figure}
 \subsection{Sieci w pełni splotowe}
 Sieciami w pełni splotowymi nazywamy te głębokie sieci neuronowe, które jako wszystkie warstwy posiadają warstwy splotowe.
@@ -176,6 +178,7 @@ Ograniczeniem w tym typie problemu jest fakt, że na danym zdjęciu może znajdo
     \centering
     \includegraphics[width=\linewidth]{images/klasyfikacja.png}
     \caption{Przykład klasyfikacji}
+    \cite{unet}
     \label{fig:klasyfikacja}
 \end{figure}
 \subsection{Klasyfikacja z lokalizacją}
@@ -188,6 +191,7 @@ Następnie możemy na tej podstawie narysowanie naokoło obiektu ramkę z podpis
     \centering
     \includegraphics[width=\linewidth]{images/klasyfikacja_z_lokalizacja.jpeg}
     \caption{Przykład klasyfikacji z lokalizacją}
+    \cite{unet}
     \label{fig:klasyfikacja_z_lokalizacja}
 \end{figure}
 \subsection{Wykrywanie obrazów}
@@ -198,6 +202,7 @@ W wypadku zdjęcia, które zawiera zarówno psa i kota dostaniemy zestaw współ
     \centering
     \includegraphics[width=\linewidth]{images/detekcja.jpeg}
     \caption{Przykład wykrywania obrazów}
+    \cite{unet}
     \label{fig:wykrywanie_obrazow}
 \end{figure}
 \subsection{Segmentacja}
@@ -209,6 +214,7 @@ Na wyjściu możemy na przykład otrzymać ten sam obrazek z tym, że zależnie 
     \centering
     \includegraphics[width=\linewidth]{images/segmentacja.png}
     \caption{Przykład segmentacji}
+    \cite{unet}
     \label{fig:segmentacja}
 \end{figure}
 \subsection{Segmentacja instancji}
