--- a/Thesis/bibliography.bib
+++ b/Thesis/bibliography.bib
@@ -24,3 +24,18 @@
   title  = {https://towardsdatascience.com/understanding-semantic-segmentation-with-unet-6be4f42d4b47},
   year   = {2021}
 }
+@article{unetpaper,
+  author        = {Olaf Ronneberger and
+               Philipp Fischer and
+               Thomas Brox},
+  title         = {U-Net: Convolutional Networks for Biomedical Image Segmentation},
+  journal       = {CoRR},
+  volume        = {abs/1505.04597},
+  year          = {2015},
+  url           = {http://arxiv.org/abs/1505.04597},
+  archiveprefix = {arXiv},
+  eprint        = {1505.04597},
+  timestamp     = {Mon, 13 Aug 2018 16:46:52 +0200},
+  biburl        = {https://dblp.org/rec/journals/corr/RonnebergerFB15.bib},
+  bibsource     = {dblp computer science bibliography, https://dblp.org}
+}
