Started perceptron info

--- a/Thesis/bibliography.bib
+++ b/Thesis/bibliography.bib
@@ -19,6 +19,14 @@
   title  = {https://stackabuse.com/introduction-to-neural-networks-with-scikit-learn/},
   year   = {2021}
 }
+@misc{neuron-image,
+  author = {Bruce Blaus},
+  title  = {https://en.wikipedia.org/wiki/Neuron}
+}
+@misc{perceptron-image,
+  author = {Mayranna},
+  title  = {https://pl.wikipedia.org/wiki/Perceptron}
+}
 @misc{unet,
   author = {Harshall Lamba},
   title  = {https://towardsdatascience.com/understanding-semantic-segmentation-with-unet-6be4f42d4b47},
