Better dnn description

--- a/Thesis/bibliography.bib
+++ b/Thesis/bibliography.bib
@@ -47,3 +47,10 @@
   biburl        = {https://dblp.org/rec/journals/corr/RonnebergerFB15.bib},
   bibsource     = {dblp computer science bibliography, https://dblp.org}
 }
+@misc{wyklad,
+  author = {M. Czoków, J. Piersa, A. Rutkowski},
+  title  = {Wstęp do sieci neuronowych.
+},
+  url    = {https://www-users.mat.umk.pl//~rudy/wsn},
+  year   = {2021}
+}
