Big changes in dnn

--- a/Thesis/bibliography.bib
+++ b/Thesis/bibliography.bib
@@ -8,6 +8,14 @@
   title  = {https://nasirml.wordpress.com/2019/01/08/convnet-in-tensorflow/},
   year   = {2021}
 }
+@misc{gradient2d,
+  author = {Oleg Alexandrov},
+  url    = {https://en.wikipedia.org/wiki/File:Gradient_descent.svg}
+}
+@misc{gradient3d,
+  author = {Joris Gillis},
+  url    = {https://commons.wikimedia.org/wiki/File:Gradient_ascent_(surface).png}
+}
 @book{handsonmachinelearning,
   author    = {Aurélien Géron},
   title     = {Hands-On Machine Learning with Scikit-Learn and TensorFlow},
@@ -18,6 +26,14 @@
   author = {Scott Robinson},
   title  = {https://stackabuse.com/introduction-to-neural-networks-with-scikit-learn/},
   year   = {2021}
+}
+@misc{mae,
+  title = {Mean Absolute Error},
+  url   = {https://en.wikipedia.org/wiki/Mean_absolute_error}
+}
+@misc{mae-tf,
+  title = {Mean Absolute Error - Tensorflow Documentation},
+  url   = {https://www.tensorflow.org/api_docs/python/tf/keras/losses/MeanAbsoluteError}
 }
 @misc{neuron-image,
   author = {Bruce Blaus},
@@ -49,8 +65,7 @@
 }
 @misc{wyklad,
   author = {M. Czoków, J. Piersa, A. Rutkowski},
-  title  = {Wstęp do sieci neuronowych.
-},
+  title  = {Wstęp do sieci neuronowych.},
   url    = {https://www-users.mat.umk.pl//~rudy/wsn},
   year   = {2021}
 }
