--- a/Thesis/bibliography.bib
+++ b/Thesis/bibliography.bib
@@ -1,20 +1,20 @@
 @misc{cnn,
-  author = {Sumit Saha},
-  title  = {https://towardsdatascience.com/a-comprehensive-guide-to-convolutional-neural-networks-the-eli5-way-3bd2b1164a53},
-  year   = {2021}
+  author       = {Sumit Saha},
+  howpublished = {\url{https://towardsdatascience.com/a-comprehensive-guide-to-convolutional-neural-networks-the-eli5-way-3bd2b1164a53}},
+  year         = {2021}
 }
 @misc{convolution,
-  author = {Md Nasir Uddin Laskar},
-  title  = {https://nasirml.wordpress.com/2019/01/08/convnet-in-tensorflow/},
-  year   = {2021}
+  author       = {Md Nasir Uddin Laskar},
+  howpublished = {\url{https://nasirml.wordpress.com/2019/01/08/convnet-in-tensorflow/}},
+  year         = {2021}
 }
 @misc{gradient2d,
-  author = {Oleg Alexandrov},
-  url    = {https://en.wikipedia.org/wiki/File:Gradient_descent.svg}
+  author       = {Oleg Alexandrov},
+  howpublished = {\url{https://en.wikipedia.org/wiki/File:Gradient_descent.svg}}
 }
 @misc{gradient3d,
-  author = {Joris Gillis},
-  url    = {https://commons.wikimedia.org/wiki/File:Gradient_ascent_(surface).png}
+  author       = {Joris Gillis},
+  howpublished = {\url{https://commons.wikimedia.org/wiki/File:Gradient_ascent_(surface).png}}
 }
 @book{handsonmachinelearning,
   author    = {Aurélien Géron},
@@ -23,30 +23,30 @@
   year      = {2018}
 }
 @misc{introduction-nn,
-  author = {Scott Robinson},
-  title  = {https://stackabuse.com/introduction-to-neural-networks-with-scikit-learn/},
-  year   = {2021}
+  author       = {Scott Robinson},
+  howpublished = {\url{https://stackabuse.com/introduction-to-neural-networks-with-scikit-learn/}},
+  year         = {2021}
 }
 @misc{mae,
-  title = {Mean Absolute Error},
-  url   = {https://en.wikipedia.org/wiki/Mean_absolute_error}
+  title        = {Mean Absolute Error},
+  howpublished = {\url{https://en.wikipedia.org/wiki/Mean_absolute_error}}
 }
 @misc{mae-tf,
-  title = {Mean Absolute Error - Tensorflow Documentation},
-  url   = {https://www.tensorflow.org/api_docs/python/tf/keras/losses/MeanAbsoluteError}
+  title        = {Mean Absolute Error - Tensorflow Documentation},
+  howpublished = {\url{https://www.tensorflow.org/api_docs/python/tf/keras/losses/MeanAbsoluteError}}
 }
 @misc{neuron-image,
-  author = {Bruce Blaus},
-  title  = {https://en.wikipedia.org/wiki/Neuron}
+  author       = {Bruce Blaus},
+  howpublished = {\url{https://en.wikipedia.org/wiki/Neuron}}
 }
 @misc{perceptron-image,
-  author = {Mayranna},
-  title  = {https://pl.wikipedia.org/wiki/Perceptron}
+  author       = {Mayranna},
+  howpublished = {\url{https://pl.wikipedia.org/wiki/Perceptron}}
 }
 @misc{unet,
-  author = {Harshall Lamba},
-  title  = {https://towardsdatascience.com/understanding-semantic-segmentation-with-unet-6be4f42d4b47},
-  year   = {2021}
+  author       = {Harshall Lamba},
+  howpublished = {\url{https://towardsdatascience.com/understanding-semantic-segmentation-with-unet-6be4f42d4b47}},
+  year         = {2021}
 }
 @article{unetpaper,
   author        = {Olaf Ronneberger and
@@ -56,7 +56,7 @@
   journal       = {CoRR},
   volume        = {abs/1505.04597},
   year          = {2015},
-  url           = {http://arxiv.org/abs/1505.04597},
+  howpublished  = {http://arxiv.org/abs/1505.04597},
   archiveprefix = {arXiv},
   eprint        = {1505.04597},
   timestamp     = {Mon, 13 Aug 2018 16:46:52 +0200},
@@ -64,8 +64,8 @@
   bibsource     = {dblp computer science bibliography, https://dblp.org}
 }
 @misc{wyklad,
-  author = {M. Czoków, J. Piersa, A. Rutkowski},
-  title  = {Wstęp do sieci neuronowych.},
-  url    = {https://www-users.mat.umk.pl//~rudy/wsn},
-  year   = {2021}
+  author       = {M. Czoków, J. Piersa, A. Rutkowski},
+  title        = {Wstęp do sieci neuronowych.},
+  howpublished = {\url{https://www-users.mat.umk.pl//~rudy/wsn}},
+  year         = {2021}
 }
